--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,17 +43,17 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #f80909;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
+  background-color: #5f5b5a;
   color: white;
 }
 
 .future {
-  background-color: #77dd77;
+  background-color: #0ba70b;
   color: white;
 }
 
