--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,17 +43,17 @@ textarea {
 }
 
 .past {
-  background-color: #f80909;
+  background-color: gray;
   color: white;
 }
 
 .present {
-  background-color: #5f5b5a;
+  background-color: red;
   color: white;
 }
 
 .future {
-  background-color: #0ba70b;
+  background-color: green;
   color: white;
 }
 
